--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -25,10 +25,10 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
         <!-- font-awesome -->
-        <!-- <link
+        <link
             rel="stylesheet"
             href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta2/css/all.min.css"
-        /> -->
+        />
         <title>React App</title>
     </head>
     <body>
